# SmartCalc_v1.0.

./: README.md
src/: CMakeLists.txt  Makefile  smartcalc.texi
src/back_tests/: s21_test.c
src/backend/: InfixIntoRPN.c  RPNeval.c  s21_calc.h  s21_credit_calc.c  s21_helpers.c
src/frontend/: creditwindow.cpp  creditwindow.h  creditwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
